--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -5,7 +5,8 @@
 
 </head>
 <body>
-    <h1>About</h1>
+    <h1>{{title}}</h1>
     <img src="./img/robot.png" alt="A pixel Robot">
+    <p>Created by {{name}}</p>
 </body>
 </html>
