used header partials

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -2,10 +2,11 @@
 <head>
     <title>serve staticdocs nodejs expressjs</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/app.js"></script>
+
 </head>
 <body>
-    <h1>{{title}}</h1>
+    {{>header}}
+    <img src="./img/robot.png" alt="A pixel Robot">
     <p>Created by {{name}}</p>
 </body>
 </html>
