--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,11 +2,10 @@
 <head>
     <title>serve staticdocs nodejs expressjs</title>
     <link rel="stylesheet" href="./css/style.css">
-
+    <script src="./js/app.js"></script>
 </head>
 <body>
-    <h1>{{title}}</h1>
-    <img src="./img/robot.png" alt="A pixel Robot">
+    {{>header}}
     <p>Created by {{name}}</p>
 </body>
 </html>
