--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,6 @@
 <body>
     {{>header}}
     <img src="./img/robot.png" alt="A pixel Robot">
-    <p>Created by {{name}}</p>
+    {{>footer}}
 </body>
 </html>
