generic 404  page, Styling

--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -4,8 +4,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    {{>header}}
-    <h1>{{errorText}}</h1>
+    <div class="main-content">
+          {{>header}}
+        <h1>{{errorText}}</h1>
+    </div>
+  
     {{>footer}}
 </body>
 </html>
