--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <head>
-    <title>serve staticdocs nodejs expressjs</title>
+    <title>about</title>
+        <link rel="icon" href='/img/weather.png'>
+
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
+<div class="main-content">
     {{>header}}
-    <img src="./img/robot.png" alt="A pixel Robot">
+    <img class="portrait" src="./img/robot.png" alt="A pixel Robot">
+</div>
+
     {{>footer}}
 </body>
 </html>
