--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <head>
-    <title>serve staticdocs nodejs expressjs</title>
+    <title>Help</title>
+        <link rel="icon" href='/img/weather.png'>
+
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
-    {{>header}}
-    <h1>Help</h1>
+    <div class="main-content">
+        {{>header}}
+        <h1>Help</h1>
+    </div>
     {{>footer}}
 </body>
 </html>
