--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,9 @@
-<h1>{{title}}</h1>
-<div>
+
+<header>
+    <h1>{{title}}</h1>
+    
+    <!-- Navigation link-->
     <a href="/">Weather</a>
     <a href="/about">About</a>
     <a href="/help">Help</a>
-</div>
+</header>
