display forecasy msg on the page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,6 +14,10 @@
              <input type="text" placeholder="location">
              <button>Search</button>
          </form>
+
+         <p id="msg-1"></p>
+         <p id="msg-2"></p>
+
     </div>
    
     {{>footer}}
