--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
 <body>
 <div class="main-content">
     {{>header}}
+    <p>This site was created by Rajan. It uses data from mapbox.com and darksky.com.</p>
     <img class="portrait" src="./img/robot.png" alt="A pixel Robot">
 </div>
 
